--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -50,7 +50,7 @@
 }
 
 .nav-links {
-  columns: #fff;
+  color: #fff;
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -82,6 +82,7 @@
   .nav-menu {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     width: 100%;
     height: 90vh;
     position: absolute;
