add styles for cards

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 .services {
   background-image: url('/public/images/img-2.jpg');
   background-position: center;
-  background-size: fill;
+  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
@@ -28,7 +28,7 @@
 .product {
   background-image: url('/public/images/img-1.jpg');
   background-position: center;
-  background-size: fill;
+  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
@@ -37,7 +37,7 @@
 .sign-up {
   background-image: url('/public/images/img-8.jpg');
   background-position: center;
-  background-size: fill;
+  background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
   font-size: 100px;
