--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -116,3 +116,19 @@ h1 {
     margin-bottom: 32px;
   }
 }
+
+@media (max-width: 960px) {
+  .cards {
+    padding: 0;
+  }
+  .cards > h1 {
+    padding: 32px 0px 0px 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  .cards__item {
+    flex-direction: column;
+    margin-bottom: 16px;
+  }
+}
