--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,7 +1,7 @@
 video {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   z-index: -1;
 }
